<resources>
    <string name="app_name">PayShop</string>
    <string name="password">Password</string>
    <string name="email">E-mail</string>
    <string name="login">Login</string>
    <string name="name">Name</string>
    <string name="signUpText">No account yet? Sign up!</string>
    <string name="already_member">Already have an account? Login</string>
    <string name="create_account">Create account</string>
    <string name="forgotPass_link">Forgot password?</string>
    <string name="send_password_link">Reset password</string>
    <string name="recover_password">Recover password</string>
    <string name="category">Category: \n %1$s</string>
    <string name="searchResults">Search results (%1$d)</string>

    <string name="nav_home">Home</string>
    <string name="nav_search">Search</string>
    <string name="nav_favorites">Favorites</string>
    <string name="nav_basket">Basket</string>
    <string name="nav_profile">Profile</string>

    <string name="good">Good</string>

    <string name="filter_sort">Filter/Sort</string>
    <string name="category_descending">Category name:\ndescending</string>
    <string name="category_ascending">Category name:\nascending</string>
    <string name="price_descending">Price:\ndescending</string>
    <string name="price_ascending">Price:\nascending</string>
    <string name="name_descending">Name:\ndescending</string>
    <string name="name_ascending">Name:\nascending</string>
    <string name="sort_by">Sort By:</string>
    <string name="filter_by">Filter By:</string>

    <array name="sortingBy">
        <item>Category name:\ndescending</item>
        <item>Category name:\nascending</item>
        <item>Price:\ndescending</item>
        <item>Price:\nascending</item>
        <item>Name:\ndescending</item>
        <item>Name:\nascending</item>
    </array>

    <array name="filterBy">
        <item>Category</item>
        <item>Price</item>
    </array>
</resources>