<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/nav_home"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/nav_home" />
    <item android:id="@+id/nav_search"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/nav_search" />

    <item android:id="@+id/nav_favorites"
        android:icon="@drawable/ic_baseline_favorite_24"
        android:title="@string/nav_favorites" />

    <item android:id="@+id/nav_basket"
        android:icon="@drawable/ic_baseline_shopping_basket_24"
        android:title="@string/nav_basket" />

    <item android:id="@+id/nav_profile"
        android:icon="@drawable/ic_baseline_person_24"
        android:title="@string/nav_profile" />
</menu>