<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="60dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/appName"
            android:textColor="@android:color/black"
            android:textSize="36sp"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_marginTop="36dp"
            android:text="@string/app_name"/>

        <!-- Name Label -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/name_txt"
                android:inputType="text"
                android:hint="@string/name"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!-- E-mail Label -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/email_txt"
                android:inputType="textEmailAddress"
                android:hint="@string/email"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Password Label -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/password_txt"
                android:inputType="textPassword"
                android:hint="@string/password"/>
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/signup_btn"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/create_account"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/login_link"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_marginTop="36dp"
            android:text="@string/already_member"/>

    </LinearLayout>
</ScrollView>